<resources>
    <string name="app_name">MobirooApp</string>
    <string name="button1">B1</string>
    <string name="button2">B2</string>
    <string name="hello">Hello Android</string>
    <string name="title">Countries</string>
    <string name="start_message">We are about to start</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_start">Start</string>
    <string name="empty_list">downloading...</string>
    <string name="city">Capital City</string>
    <string name="result">Caculated Result</string>
    <string name="btn_country">COUNTRIES</string>
    <string name="test">test</string>

</resources>
