<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="200dp"
    android:background="#00ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#00ffffff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/title"
            android:id="@+id/title_textView"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/start_message"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textSize="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:id="@+id/btn_cancel"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_start"
                android:id="@+id/btn_start"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>